# pam-paski

./: .prettierignore  .prettierrc  Cargo.toml  README.md
crates/paski-cli/: Cargo.toml
crates/paski-cli/src/: main.rs
crates/paski-lib/: Cargo.toml
crates/paski-lib/src/: config.rs  credentials.rs  ipc.rs  lib.rs  utils.rs  web.rs  webauthn.rs
crates/paski-lib/static/: authenticate.html  enroll.html
crates/paski-lib/tests/: parse_test.rs
crates/paski-pam/: Cargo.toml
crates/paski-pam/src/: lib.rs
docs/: design.md
