[workspace]
resolver = "2"
members = [
    "crates/paski-lib",
    "crates/paski-cli",
    # paski-pam only builds on Linux (requires PAM headers)
    # Uncomment on Linux: "crates/paski-pam",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bdb/pam-paski"

[workspace.dependencies]
paski-lib = { path = "crates/paski-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"
base64urlsafedata = "0.5"
url = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
