[package]
name = "paski-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pam-paski"
path = "src/main.rs"

[dependencies]
paski-lib = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
chrono = { workspace = true }
