[package]
name = "paski-lib"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
base64urlsafedata = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
