[package]
name = "paski-pam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
name = "pam_paski"

[dependencies]
pamsm = { version = "0.5.5", features = ["libpam"] }
paski-lib = { path = "../paski-lib" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
webauthn-rs.workspace = true
